src/TestCaseExplorer/css/app.css
#testcase-extension {
    font-size: 14px;
    position: fixed;
    width: 100%;
    height: 100%;
}

#far-right-pane-pivot {
    display:none;
    width:150px;
}

.child-node-icon::before {
    position: relative;
    content: url('../img/Child-node-icon.png');
    
}
.icon-testplan::before{
    content: url('../img/testPlan.png');
}

#testmanagement-view-left-pane{
    margin-left:16px;
}
#treeview-Cbo-container {
    margin-left:12px;
    margin-right:10px;

}


    #testcase-extension > .splitter > .leftPane {
        width: 10%;
        overflow: auto;
    }

    #testcase-extension > .splitter > .handleBar {
        left: 10%;
    }

    #testcase-extension > .splitter > .rightPane {
        left: 10%;
        overflow: auto;
    }

  .far-right-pane-list-container {
    top: 120px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    position: absolute;
    overflow: auto;
    margin: 0 10px;
}

    .testmanagement-suites-tree {
    position: absolute;
    top: 70px;
    left: 12px;
    right: 0px;
    bottom: 0px;
    overflow: auto;
}
    .fill-grid{
       position:absolute; 
       top:45px;
       left:0px;
       right:0px; 
       bottom:0px
    }
     .rightPane .hub-no-content-gutter {
    padding-left: 0px;
}
      .rightPane .rightPane .far-right-pane-pivot.hub-pivot {
    position: absolute;
    top: 40px;
}

    .test-case-details-pane .far-right-pane-title {
    left: 0px;
    right: 0px;
    margin-left: 20px;
    margin-right: 20px;
    padding-top: 12px;
    padding-bottom: 38px;
    font-family: Segoe UI Light,Segoe UI,Tahoma,Arial,Verdana;
    font-weight: lighter;
    font-size: 18px;
    color: #000;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.left-hub-content .hub-pivot-content {
    top:0px;
}
.testmanagement-details-grid{
    position: absolute;
    top: 0px;
    left: 6px;
    right: 6px;
    bottom: 0px;
    overflow: auto;
}

.drag-tile{
    background-color:lightblue;
    border-color:black;
    border-width:1px;
    vertical-align:middle;
}
.drag-tile-item-count {
    font-size:large;
    font-weight:bold;
    text-align:center;
}

.drag-tile-drag-type {
    font-size:large;
    font-weight:bold;
    margin:6px;
}

.drag-tile-head{
    float:left;
    height:100%;
}
.drag-tile-list{
    float:right;
   
}

.droppable-hover {
    background-color:lightgreen;
}
.test-count{

}

.test-case-hub-test-case-count  {
    float: right;
    margin-right: 10px;
    position: relative;
}
.views {
    float: left;
    font-size: 12px;
    font-family: Segoe UI, Tahoma, Arial, Verdana;
    height: 34px;
}
.hub-pivot {
    font-size: 11px;
    position: relative;
    left: 0px;
    top: 0px;
    right: 0px;
    overflow: visible;
    height: 34px;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

#testCasePane .right-hub-content {
    top: 40px;
}

.right-hub-content .pivot-filter {
    padding: 0 5px 0 9px;
    border: 1px solid transparent;
    border-bottom: 0;
}

